<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VizEQ</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_role">VIZEQ</string>
    <string name="DJButton">Host as a DJ</string>
    <string name="NotADJButton">Join a party</string>
    <string name="title_activity_sound_visualization">SoundVisualizationActivity</string>
    <string name="dummy_button">Settings</string>
    <string name="dummy_content">VIZEQ</string>
    <string name="title_activity_host">Host a Party</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_host_menu">Host Menu</string>
    <string name="title_activity_preference_visualization">PreferenceVisualizationActivity</string>
    <string name="title_musicqueue_list">MusicQueues</string>
    <string name="title_musicqueue_detail">MusicQueue Detail</string>
    <string name="title_activity_music_queue">MusicQueueActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="QueueTopOrBottom">Add this track to top or bottom of queue?</string>
    <string name="HostMenu:">Host menu</string>
    <string name="ScopeThisCrowd">Scope this Crowd</string>
    <string name="NowPlaying">Now Playing</string>
    <string name="HostSearch">Search and Queue</string>
    <string name="HostName">name</string>
    <string name="HostIPAddress">ip address</string>
    <string name="AddClient">add</string>
    <string name="OrText">-or-</string>
    <string name="title_activity_search_party">SearchPartyActivity</string>
    <string name="ExplainSignIn">To play music, please sign in to Spotify</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="username">Enter Your Name</string>
    <string name="usernameTitle">User Name:</string>
    <string name="host_volunteer">Host Queue</string>
    <string name="volunteer_description">Do you wish to become host if the current host leaves?</string>
    <string name="color_pick">Pick your Color</string>
    <string name="uppercaseVIZEQ">VIZEQ</string>
    <string name="title_activity_request_details">RequestDetailsActivity</string>
    <string name="title_activity_about">About</string>
    <string name="aboutText">This product uses SPOTIFY CORE but is not endorsed, certified or otherwise approved in any way by Spotify. Spotify is the registered trade mark of the Spotify Group.\n\n
Credits:\n\n
Libspotify wrapper: https://github.com/spotify/psyonspotify\n\n

Android Asynchronous Http Client: http://loopj.com/android-async-http\n\n

Kiss FFT:\n
Copyright © 2003-2010, Mark Borgerding\n\n

All rights reserved.\n\n

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n

    * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n
    * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n
    * Neither the author nor the names of any contributors may be used to endorse or promote products derived from this software without specific prior written permission.\n\n

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

Bugfix for newer Galaxy devices:\n
 * Copyright 2013, Haruki Hasegawa\n
 *\n
 * Licensed under the MIT license:\n
 * http://creativecommons.org/licenses/MIT/\n
https://github.com/felixpalmer/android-visualizer/pull/6\n
</string>
    <string name="startSession">let\'s party!</string>
    <string name="noMusic">No music in the queue.  Queue it up!</string>
    <string name="title_activity_host_sound_visualization">HostSoundVisualizationActivity</string>

</resources>