<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                                    
                        <EditText
					        android:id="@+id/CustomSearchField"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:layout_marginTop="20dp"
					        android:ems="10"
					        android:hint="Search" />
                        <Button
						    android:id="@+id/SearchOK"
						    style="?android:attr/buttonStyleSmall"
						    android:layout_width="60dp"
						    android:layout_height="wrap_content"
						    android:text="OK" />
                    </LinearLayout>

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    	
                    	<LinearLayout
                            android:id="@+id/customSearchLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>
                    	
                    </ScrollView>
                            
                </LinearLayout>

                <LinearLayout
	                android:id="@+id/tab02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >      
	                <ScrollView
                    	android:layout_width="match_parent"
                    	android:layout_height="match_parent"
                    	android:orientation="vertical" >
	                    <LinearLayout
		                    android:id="@+id/profile_queue"
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
		                    android:orientation="vertical" >"
		                </LinearLayout>
		             </ScrollView>
	            </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/tab03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:orientation="vertical">
                        
                    	<TextView
					        android:id="@+id/Profile"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="Username:" />                    
                        <EditText
                            android:id="@+id/ProfileUsername"
				        	android:layout_width="wrap_content"
				        	android:layout_height="wrap_content"
					        android:text="@string/username"
					        android:inputType="textCapWords"
					        android:maxLines="1"
					        android:selectAllOnFocus="true"
					        android:singleLine="true"
					        android:title="@string/usernameTitle" 
					        android:ems="16" />
                        
                        <TextView
					        android:id="@+id/HostQueue"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/host_volunteer" />
                        <CheckBox
                            android:id="@+id/HostQueueCheck"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:defaultValue="false"
					        android:text="@string/volunteer_description" />
                        
                       	<LinearLayout
                            android:layout_width="match_parent"
                    		android:layout_height="match_parent" 
                    		android:orientation="horizontal">
	                        <TextView
						        android:id="@+id/ColorPicker"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:text="@string/color_pick" />
	                        <Spinner
							    android:id="@+id/colorspinner"
	    						android:layout_width="wrap_content"
	    						android:layout_height="wrap_content"/>	                        	                                         		                    
	                    </LinearLayout>	                                                   
         		        <Button
		        			android:id="@+id/SubmitCustomList"
		        			android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
		        			android:text="Send My Requests" />  			 
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>